@@ -4,10 +4,10 @@
 .\" Generator: DocBook XSL Stylesheets v1.78.1 <http://docbook.sf.net/>
 .\"      Date: September 2020
 .\"    Manual: \ \&
-.\"    Source: \ \& 1.1.1
+.\"    Source: \ \& 1.1.2-dev
 .\"  Language: English
 .\"
-.TH "MCABBER" "1" "September 2020" "\ \& 1\&.1\&.1" "\ \&"
+.TH "MCABBER" "1" "September 2020" "\ \& 1\&.1\&.2\-dev" "\ \&"
 .\" -----------------------------------------------------------------
 .\" * Define some portability stuff
 .\" -----------------------------------------------------------------
