@@ -1,7 +1,7 @@
 MCABBER(1)
 ===========
 Mikael BERTHE <mcabber@lilotux.net>
-v1.1.1, September 2020
+v1.1.2-dev, September 2020
 
 NAME
 ----
