@@ -1,3 +1,9 @@
+mcabber (1.1.2-dev)
+
+ * 
+
+ -- Mikael, ?
+
 mcabber (1.1.1)
 
  * Fix compilation with GCC 10 or -fno-common in CFLAGS (Andrey Utkin)
